--- a/desafios/des_12/style.css
+++ b/desafios/des_12/style.css
@@ -2,6 +2,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
 
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+
+}
+
 *{
     margin: 0px;
     padding: 0px;
@@ -10,6 +17,8 @@
 html, body {
     background-color: darkgray;
     min-height: 100vh;
+    font-family: var(--fonte1);
+    font-size: 1em;
 }
 
 header {
@@ -19,22 +28,21 @@ header {
 }
 
 header h1 {
-    font-family: 'Passion One', serif;
-    font-size: 124px;
+    font-family: var(--fonte2);
+    font-size: 10vw;
     font-variant: small-caps;
     padding: 50px;
 }
 
 header p {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: var(--fonte1);
     font: normal;
     font-size: 16px;
     padding-bottom: 50px;
 }
 
 a {
-    font-family: Verdana, Geneva, Tahoma, 
-    sans-serif;
+    font-family: var(--fonte1);
     color: white;
     font-weight: bolder;
     text-decoration: none;
@@ -45,12 +53,12 @@ a:hover {
 }
 
 section {
-    font-family: 'Sriracha';
-    font-size: 43px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
     font: 100;
     padding-top: 10vh;
     padding-bottom: 10vh;
-    line-height: 2em;
+    line-height: 5vm;
     padding-left: 30px;
 }
 
@@ -65,8 +73,9 @@ section.image {
 }
 
 section.image > p {
-    width: 400px;
+    display: inline-block;
     background-color: #000D00;
+    padding: 5px;
 }
 
 /*.section_02 {
