--- a/desafios/des_12/style.css
+++ b/desafios/des_12/style.css
@@ -62,6 +62,11 @@ section {
     padding-left: 30px;
 }
 
+section p {
+    padding-bottom: 2em;
+}
+
+
 section.normal {
     background-color: white;
     color: black;
@@ -70,25 +75,28 @@ section.normal {
 section.image {
     background-color: darkgrey;
     color: white;
+    box-shadow: 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
+    background-attachment: fixed; /*efeito paralax*/
 }
 
 section.image > p {
     display: inline-block;
-    background-color: #000D00;
+    background-color: rgba(0, 0, 0, 0.514);
     padding: 5px;
+    text-shadow: 1px 1px opx #000;
 }
 
-/*.section_02 {
+#img_01 {
     background-image: url(imagens/background001.jpg);
-    background-size: 100% 100%;
+    background-position: right center;
     color: white;
 }
 
-.section_04 {
+#img_02 {
     background-image: url(imagens/background002.jpg);
-    background-size: 100% 100%;
     color: white;
-}*/
+}
 
 footer {
     background-color: #000000;
